Correcting alignments.

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -279,7 +279,7 @@ h3 {
   .yes-no-btns {
     cursor: pointer;
     padding: 7px 35px;
-    width: 113px;
+    min-width: 110px;
     text-align: center;
   }
 
